fixed auto zoom on ios

--- a/src/styles/postComments.css
+++ b/src/styles/postComments.css
@@ -57,6 +57,7 @@
   border: 1px solid rgb(202, 202, 202);
   padding: 12px;
   font-family: sans-serif;
+  font-size: 16px;
 }
 
 .commentsContainer {
